# dev-atlas

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
backend/app/: kb_github.py  main.py
backend/app/di/: handlers.py
backend/app/dto/: project.py  task.py  user_setting.py  work_log.py
backend/app/handler/: kb_router.py  project_handler.py  task_handler.py  user_setting_handler.py  work_log_handler.py
backend/app/infra/: crypto.py  db.py  kb_resolver.py  mcp_auth.py  tenancy.py
backend/app/usecase/: project_usecase.py  project_usecase_interface.py  task_usecase.py  task_usecase_interface.py  user_setting_usecase.py  user_setting_usecase_interface.py  work_log_usecase.py  work_log_usecase_interface.py
backend/mcp_server/: server.py
backend/middleware/: web_auth.py  web_auth_middleware.py
backend/migrations/: .snapshot.json  20260715082133_create_projects.up.sql  20260715082134_create_work_logs.up.sql  20260715133132_create_tasks.up.sql  20260716033214_alter_projects.up.sql  20260716033215_alter_work_logs.up.sql  20260716033216_alter_tasks.up.sql  20260717090810_alter_projects.up.sql  20260717090811_alter_work_logs.up.sql  20260717090812_alter_tasks.up.sql  20260717090900_backfill_owner_email.up.sql  20260717091742_create_user_settings.up.sql
backend/tests/: test_project_usecase.py  test_task_usecase.py  test_web_auth.py  test_work_log_usecase.py
backend/tests/integration/: conftest.py
backend/tools/: apply-migrations.py
(+85 files in other folders)
